# CPPGuilded

./: .clang-format  .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  doxyconfig
.cmake/api/v1/reply/: cache-v2-27ce82312834401ebf9f.json  cache-v2-5a0d03575ee428ff921b.json  cmakeFiles-v1-4a2c09302fd8907d5c48.json  codemodel-v2-048cb541cb66c953dcb7.json  codemodel-v2-47615cd9e2ef0259f7c2.json  codemodel-v2-c9c5c368e03a51ab10be.json  codemodel-v2-ef4476e98be054fbbcf3.json  directory-.-Debug-3560f47437f18af96a9e.json  directory-.-Debug-5808b514e3b2f527f347.json  directory-.-Debug-6be4567028b5388cb8f9.json  directory-.-Debug-942bf6832d54ba31b758.json  directory-_deps.boost_beast-build-Debug-a88b2b621c59df67f4c3.json  directory-_deps.nlohmann_json-build-Debug-cf8d04c6900580e5bb30.json  index-2023-02-06T16-57-57-0591.json  index-2023-02-07T11-54-48-0435.json  index-2023-02-08T12-23-16-0376.json  index-2023-02-10T18-05-44-0807.json  target-cppguilded-Debug-c125d600f7e57545cbcb.json  target-cppguilded-Debug-c88c1a9dcca593c4f2e3.json  target-cppguilded-Debug-e951c114b775df5f1cbf.json  target-cppguilded-Debug-ed6a53c9f706df2f53bc.json  target-tests-Debug-711b4aa3acb5e3e67234.json  target-tests-Debug-d92b18dcb4cb9b09d01e.json
CPPGuilded/: index.h  library.cpp  library.hpp  static.cpp  static.hpp
CPPGuilded/Classes/: BannedMember.cpp  BannedMember.hpp  Base.cpp  Base.hpp  Channel.cpp  Channel.hpp  Embed.cpp  Embed.hpp  Exceptions.cpp  Exceptions.hpp  ForumThread.cpp  ForumThread.hpp  GatewayHandler.cpp  GatewayHandler.hpp  Guild.cpp  Guild.hpp  Member.cpp  Member.hpp  Message.cpp  Message.hpp  RequestHandler.cpp  RequestHandler.hpp  Threadpool.cpp  Threadpool.hpp  User.cpp  User.hpp  Utils.cpp  Utils.hpp  WSManager.cpp  WSManager.hpp
CPPGuilded/Classes/Gateway/: GatewayHandler.cpp  GatewayHandler.hpp  WSManager.cpp  WSManager.hpp
CPPGuilded/Classes/Gateway/Events/: ChannelHandler.cpp  ChannelHandler.hpp  ForumThreadHandler.cpp  ForumThreadHandler.hpp  GuildHandler.cpp  GuildHandler.hpp  MessageHandler.cpp  MessageHandler.hpp
CPPGuilded/Classes/REST/: Definitions.hpp  RESTManager.cpp  RESTManager.hpp
CPPGuilded/Classes/REST/Routes/: Channels.cpp  Channels.hpp  Guilds.cpp  Guilds.hpp  Misc.cpp  Misc.hpp
CPPGuilded/Classes/recycled/: Utils.cpp  Utils.hpp
doxygen/html/: _base_8hpp_source.html  _channel_8hpp_source.html  _channel_handler_8hpp_source.html  _channels_8hpp_source.html  _definitions_8hpp_source.html  _embed_8hpp_source.html  _exceptions_8hpp_source.html  _gateway_handler_8hpp_source.html  _guilds_8hpp_source.html  _member_8hpp_source.html  _message_8hpp_source.html  _message_handler_8hpp_source.html  _misc_8hpp_source.html  _r_e_s_t_manager_8hpp_source.html  _request_handler_8hpp_source.html  _threadpool_8hpp_source.html  _user_8hpp_source.html  _utils_8hpp_source.html  _w_s_manager_8hpp_source.html  annotated.html  class_c_p_p_guilded_1_1_base-members.html  class_c_p_p_guilded_1_1_base.html  class_c_p_p_guilded_1_1_channel-members.html  class_c_p_p_guilded_1_1_channel.html  class_c_p_p_guilded_1_1_channel_handler-members.html  class_c_p_p_guilded_1_1_channel_handler.html  class_c_p_p_guilded_1_1_channels-members.html  class_c_p_p_guilded_1_1_channels.html  class_c_p_p_guilded_1_1_client-members.html  class_c_p_p_guilded_1_1_client.html  class_c_p_p_guilded_1_1_client_exception-members.html  class_c_p_p_guilded_1_1_client_exception.html  class_c_p_p_guilded_1_1_embed-members.html  class_c_p_p_guilded_1_1_embed.html  class_c_p_p_guilded_1_1_gateway_handler-members.html  class_c_p_p_guilded_1_1_gateway_handler.html  class_c_p_p_guilded_1_1_guilded_exception-members.html  class_c_p_p_guilded_1_1_guilded_exception.html  class_c_p_p_guilded_1_1_guilds-members.html  class_c_p_p_guilded_1_1_guilds.html  (+70 more)
doxygen/html/search/: all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
doxygen/latex/: _base_8hpp_source.tex  _channel_8hpp_source.tex  _channel_handler_8hpp_source.tex  _channels_8hpp_source.tex  _definitions_8hpp_source.tex  _embed_8hpp_source.tex  _exceptions_8hpp_source.tex  _gateway_handler_8hpp_source.tex  _guilds_8hpp_source.tex  _member_8hpp_source.tex  _message_8hpp_source.tex  _message_handler_8hpp_source.tex  _misc_8hpp_source.tex  _r_e_s_t_manager_8hpp_source.tex  _request_handler_8hpp_source.tex  _threadpool_8hpp_source.tex  _user_8hpp_source.tex  _utils_8hpp_source.tex  _w_s_manager_8hpp_source.tex  annotated.tex  class_c_p_p_guilded_1_1_base.tex  class_c_p_p_guilded_1_1_channel.tex  class_c_p_p_guilded_1_1_channel_handler.tex  class_c_p_p_guilded_1_1_channels.tex  class_c_p_p_guilded_1_1_client.tex  class_c_p_p_guilded_1_1_client_exception.eps  class_c_p_p_guilded_1_1_client_exception.tex  class_c_p_p_guilded_1_1_embed.tex  class_c_p_p_guilded_1_1_gateway_handler.eps  class_c_p_p_guilded_1_1_gateway_handler.tex  class_c_p_p_guilded_1_1_guilded_exception.eps  class_c_p_p_guilded_1_1_guilded_exception.tex  class_c_p_p_guilded_1_1_guilds.tex  class_c_p_p_guilded_1_1_h_t_t_p_error.eps  class_c_p_p_guilded_1_1_h_t_t_p_error.tex  class_c_p_p_guilded_1_1_member.eps  class_c_p_p_guilded_1_1_member.tex  class_c_p_p_guilded_1_1_message.tex  class_c_p_p_guilded_1_1_message_handler.tex  class_c_p_p_guilded_1_1_method_filters.tex  (+34 more)
recycled/: Utils.cpp
tests/: main.cpp  test.cpp
tests.app/Contents/MacOS/: tests
